Disable login by phone control and fix login/register message box visibility

--- a/src/components/Checkbox/styles.scss
+++ b/src/components/Checkbox/styles.scss
@@ -5,6 +5,12 @@
     cursor: pointer;
   }
 
+  &.disabled {
+    label {
+      cursor: auto;
+    }
+  }
+
   input {
     visibility: hidden;
     position: absolute;
